# lotto

./: .env.example  .gitignore  Lotto.py  README.md  analysis.ipynb  docker-compose.yml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: ai-engineer.md  backend-developer.md  brand-marketer.md  designer.md  frontend-developer.md  product-strategist.md  qa-engineer.md
airflow/: Dockerfile  requirements.txt
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/db/: mongodb.py
backend/app/models/: lotto.py
backend/app/routers/: collection.py  lotto.py  mlops.py  prediction.py  stats.py  ws.py
backend/app/services/: collection_service.py  log_manager.py  lotto_service.py  prediction_service.py
backend/tests/: conftest.py  test_health.py  test_lotto_router.py  test_prediction_router.py  test_stats_router.py
data/: data.csv
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  (+1 more)
ml/: predict.py  pyproject.toml  train.py
ml-service/: Dockerfile  pyproject.toml
ml-service/app/: config.py  main.py  migrate_models.py
ml-service/app/db/: mongodb.py
ml-service/app/routers/: mlops.py  models.py  predict.py  train.py  ws.py
ml-service/app/services/: prediction_service.py  registry_service.py  training_service.py
ml/model/: gru.py  lstm.py  sklearn_models.py  transformer.py
ml/tests/: test_dag_logic.py  test_models.py
mlflow/: Dockerfile  entrypoint.sh  pyproject.toml
mongo-init/: init.js
nginx/: Dockerfile  nginx.conf
prototype/: LSTM.py  Lotto.py  analysis.ipynb
(+15 files in other folders)
