[project]
name = "lotto-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "motor==3.3.2",
    "pymongo==4.6.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "torch==2.10.0",
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
    "mlflow==2.10.2",
    "httpx==0.27.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
