[project]
name = "lotto-ml-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "motor==3.3.2",
    "pymongo==4.6.1",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "torch==2.2.0",
    "numpy==1.26.3",
    "scikit-learn==1.4.0",
    "mlflow==2.10.2",
    "setuptools",
    "httpx==0.27.0",
]
