[project]
name = "lotto-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.0",
    "numpy==1.26.3",
    "pymongo==4.6.1",
    "scikit-learn==1.4.0",
    "mlflow==2.10.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
